@@ -163,6 +163,10 @@ public class ExactStatsCache extends StatsCache {
       for (Term t : terms) {
         TermContext termContext = TermContext.build(context, t);
 
+        if (!colMap.containsKey(t.field())) { // collection stats for this field
+          colMap.put(t.field(), new CollectionStats(searcher.localCollectionStatistics(t.field())));
+        }
+
         TermStatistics tst = searcher.localTermStatistics(t, termContext);
         if (tst.docFreq() == 0) { // skip terms that are not present here
           continue;
@@ -170,23 +174,22 @@ public class ExactStatsCache extends StatsCache {
 
         statsMap.put(t.toString(), new TermStats(t.field(), tst));
         rb.rsp.add(TERMS_KEY, t.toString());
-        if (!colMap.containsKey(t.field())) { // collection stats for this field
-          colMap.put(t.field(), new CollectionStats(searcher.localCollectionStatistics(t.field())));
-        }
       }
-      if (statsMap.size() != 0 && colMap.size() != 0) { //Don't add empty keys
+      if (statsMap.size() != 0) { //Don't add empty keys
         String termStatsString = StatsUtil.termStatsMapToString(statsMap);
         rb.rsp.add(TERM_STATS_KEY, termStatsString);
-
+        if (LOG.isDebugEnabled()) {
+          LOG.debug("termStats=" + termStatsString + ", terms=" + terms + ", numDocs=" + searcher.maxDoc());
+        }
+      }
+      if (colMap.size() != 0){
         String colStatsString = StatsUtil.colStatsMapToString(colMap);
         rb.rsp.add(COL_STATS_KEY, colStatsString);
-
         if (LOG.isDebugEnabled()) {
-          LOG.debug("termStats=" + termStatsString + ", collectionStats="
+          LOG.debug("collectionStats="
               + colStatsString + ", terms=" + terms + ", numDocs=" + searcher.maxDoc());
         }
       }
-
     } catch (IOException e) {
       LOG.error("Error collecting local stats, query='" + q.toString() + "'", e);
       throw new SolrException(ErrorCode.SERVER_ERROR, "Error collecting local stats.", e);
